[package]
name = "miner-test"
version = "0.1.0"
authors = ["Nikita Chebykin <nikita@chebyk.in>"]

[dependencies]
ethcore = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
ethkey = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
ethcore-bigint = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
ethcore-logger = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
ethcore-io = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
kvdb = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
kvdb-memorydb = {git = 'https://github.com/paritytech/parity', tag = "v1.9.7"}
ethereum-types = "0.2"
rustc-hex = "1.0"
clap = "2"
log = "0.3"
